welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: type green is not a member of object java.awt.Color
  if (getCouleurSol():Color.green) {
                            ^SlugTracking:8: error: not found: type True
  if (estFaceMur():True) {
                   ^SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estFaceMur():True) {
  ^